# whisprite-py

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: publish.yml
whisprite/: __init__.py  import_collection.py  import_legacy_command.py  utils.py  watch.py
whisprite/bot/: __init__.py  channels.py  collections.py  counters.py  user_commands.py
whisprite/db/: __init__.py
whisprite/db/models/: __init__.py  base.py  channels.py  collections.py  commands.py  counters.py  types.py
